Check to make sure that the form looks good on mobile and desktop. Also revamped my HTML to be better formatted for CSS. #1.

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,60 +6,108 @@ header > h3 {
   padding-left: 250px;
   font-family: 'Oswald', sans-serif;
   font-size: 40px;
+  width: 150%;
+}
+
+.row-one {
+  display: flex;
+  justify-content: space-around;
   width: 100%;
 }
 
-.top-form {
+.row-two {
+  width: 120%;
   display: flex;
-  justify-content: center;
-  font-family: 'Raleway', sans-serif;
+  flex-direction: column;
 }
 
-.form-right {
-  margin-right: 200px;
-  margin-left: 20px;
-  margin-top: 130px;
+.col-one-row-one {
+  padding-right: 20px;
 }
 
-.image-submit {
-  margin-right: 0;
-}
-
-.image-submit > h3 {
+.col-one-row-one > h3 {
   font-size: 40px;
-}
-
-.image-placeholder {
-  width: 500px;
-}
-
-.text-input {
-  width: 210%;
-  height: 50px;
-  margin-bottom: 50px;
   font-family: 'Raleway', sans-serif;
-  font-size: 16px;
+}
+
+.col-one-row-one > .image-placeholder {
+  width: 100%;
+}
+
+.col-two-row-one {
+  margin-top: 150px;
 }
 
 .text-label {
   font-size: 22px;
+  font-family: 'Raleway', sans-serif;
+}
+
+.text-input {
+  width: 200%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 18px;
+  font-family: 'Raleway', sans-serif;
+  margin-bottom: 80px;
 }
 
 textarea {
-  width: 180%;
-  font-family: 'Raleway', sans-serif;
-  color: black;
+  width: 100%;
 }
 
-.submit-button {
-  width: 180%;
-  display: flex;
-  justify-content: flex-end;
+.button {
+  align-self: flex-end;
 }
 
-.submit-button > button {
+.button > button {
   font-family: 'Raleway', sans-serif;
   padding: 5px 10px 5px 10px;
   margin-top: 10px;
   border-radius: 5%;
+}
+
+@media screen and (max-width: 1220px) {
+  .text-input {
+    width: 150%;
+  }
+
+  textarea {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .button {
+    align-self: flex-end;
+    margin-right: 100px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .row-one {
+    display: inline;
+  }
+
+  .text-input {
+    width: 90%;
+    margin-bottom: 10px;
+  }
+
+  textarea {
+    width: 75%;
+  }
+
+  .button {
+    align-self: flex-end;
+    margin-right: 100px;
+  }
+
+  .col-two-row-one {
+    margin-top: 20px;
+  }
+
+  header > h3 {
+    padding-left: 15px;
+  }
 }
